--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <link rel="shortcut icon" href="../static/css/images/">
+    <link rel="shortcut icon" href="../static/css/images/color6_5.png">
     <title>The Color Six</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="../static/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 
+    <nav id="navTop">
+      <div class="nav-wrapper">
+        <ul id="nav-mobile" class="center">
+          <a target="_black" href="https://www.instagram.com/the.color.six/?hl=en"><img src="https://img.icons8.com/dusk/64/000000/instagram-new.png"></a>
+          <a target="_black" href="https://www.youtube.com/channel/UCZBIyJroaCWPoG7imCNgsAg"><img src="https://img.icons8.com/dusk/64/000000/youtube-play.png"></a>
+          <a target="_black" href="https://facebook.com/thecolorsix/"><img src="https://img.icons8.com/dusk/64/000000/facebook.png"></a>
 
+        </ul>
+      </div>
+    </nav>
+
+    <div id="coverPage"></div>
+
+    <div id="navPage" class="page valign-wrapper">
+      <ul class="collection">
+        <li id="link2events" class="collection-item gradient-border">Events</li>
+        <li id="link2music" class="collection-item gradient-border">Music</li>
+        <li id="link2videos" class="collection-item gradient-border">Videos</li>
+        <li id="link2aboutus" class="collection-item gradient-border">About Us</li>
+      </ul>
+    </div>
+
+    <nav id="mainNav" >
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo center"><img src="../static/css/images/color6_2.JPG"></a>
+        <ul id="nav-mobile" class="left">
+          <li><a id="back2menu" class="waves-effect waves-light btn gradient-border" href="#!"><img src="../static/css/images/menu.png"></a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <div id="events" class="page"></div>
+
+    <div id="music" class="page"></div>
+
+    <div id="videos" class="page">
+
+
+      <div class="row">
+
+        <div class="col s12 m6 l4">
+          <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/lG5sq4fvg_I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+
+        
+        <div class="col s12 m6 l4">
+          <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/COX616Yi_kY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l4">
+          <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/0_eSLxQ6BQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+
+        <div class="col s12 m6 l4">
+          <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/FY7IaRFuYLQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+
+      </div>
+
+
+
+    </div>
+
+    <div id="aboutus" class="page">
+      
+      <div class="container center"><img id="logo" src="../static/css/images/color6_1.JPG"><p class="flow-text center-align">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+
+    </div>
+
+    <nav id="navBottom">
+      <div class="nav-wrapper">
+        <ul class="left">
+          <li><a href="">contact@thecolorsix.com</a></li>
+        </ul>
+        <ul class="right">
+          <li><a href="">925-915-9426</a></li>
+        </ul>
+      </div>
+    </nav>
 
 
 
@@ -20,8 +112,7 @@
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../static/js/custom.js"></script>
-
   </body>
 </html>
