--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 
           <div class="column add-bottom">
               <div id="mainwrap">
-                  <h6>Debut EP "<span>Aurora</span>" - Coming Soon</h6>
+                  <h6>Aurora - <span>Coming Soon</span></h6>
                   <div class="img-container">
                     <img class="center" src="../static/css/images/aurora.jpg">
                   </div>
