--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       <div class="nav-wrapper">
         <a href="." class="brand-logo center"><img src="../static/css/images/color6_2.JPG"></a>
         <ul id="nav-mobile" class="left">
-          <li><a id="back2menu" class="waves-effect waves-light btn gradient-border" href="#!"><img src="../static/css/images/menu.png"></a></li>
+          <li><a id="back2menu" class="waves-effect waves-light btn gradient-border"><img src="../static/css/images/menu.png"></a></li>
         </ul>
       </div>
     </nav>
