--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       </div>
     </nav>
 
-    <div id="coverPage"></div>
+    <div id="slide-cont">
+      <div id="coverPage"></div>
+    </div>
 
     <div id="navPage" class="page valign-wrapper">
       <ul class="collection">
