--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,11 @@
       </div>
     </nav>
 
-    <div id="slide-cont">
-      <div id="coverPage"></div>
+<!--     <div id="slide-cont">
+      <div id="coverPage" class="section"></div>
+      <div class="section"></div>
     </div>
-
+ -->
     <div id="navPage" class="page valign-wrapper">
       <ul class="collection">
         <li id="link2events" class="collection-item gradient-border">Events</li>
@@ -140,9 +141,9 @@
       
       <div class="container center">
         <div class="img-container">
-          <img id="logo" src="../static/css/images/tc6_39.jpg">
+          <img id="logo" src="../static/css/images/tc6_8.jpg">
         </div>
-        <p class="flow-text center-align"><span>The <span>Color</span> Six</span>  is a San Francisco based rock band that began in 2017 as a solo project of founding member <a target="_blank" href="https://www.instagram.com/dez_monroe/">Dez Monroe</a>. As of 2019, the lineup now includes bassist and singer <a target="_blank" href="https://www.instagram.com/vginnyg/">Adeline Jayne</a>, and drummer <a target="_blank" href="https://www.instagram.com/jimmy.brents/?hl=en">Jimmy Brents</a>.</p></div>
+        <p class="flow-text center-align"><span>The <span>Color</span> Six</span>  is a San Francisco based rock band that began in 2017 as a solo project of founding member <a target="_blank" href="https://www.instagram.com/dez_monroe/">Dez Monroe</a>. As of 2019, the lineup now includes bassist and singer <a target="_blank" href="https://www.instagram.com/vginnyg/">Adeline Jayne</a>. </a>.</p></div>
 
       <div class="row">
 
