--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,11 @@
       </div>
     </nav>
 
-<!--     <div id="slide-cont">
+    <div id="slide-cont">
       <div id="coverPage" class="section"></div>
       <div class="section"></div>
     </div>
- -->
+
     <div id="navPage" class="page valign-wrapper">
       <ul class="collection">
         <li id="link2events" class="collection-item gradient-border">Events</li>
