--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
     </nav>
 
     <div id="slide-cont">
-      <div id="coverPage" class="section"></div>
-      <div class="section"></div>
+      <div id="coverPage" class="center-align"><img src="../static/css/images/color6_4.JPG"></div>
     </div>
 
     <div id="navPage" class="page valign-wrapper">
