--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
           <div class="column add-bottom">
               <div id="mainwrap">
-                  <h6>Aurora - <span>Coming Soon</span></h6>
+                  <h6>Aurora</h6>
                   <div class="img-container">
                     <img class="center" src="../static/css/images/aurora.jpg">
                   </div>
@@ -73,7 +73,9 @@
                      
                   </div>
                   <div id="plwrap">
-                      <ul id="plList"></ul>
+                      <ul id="plList">
+
+                      </ul>
                   </div>
               </div>
           </div>
