removed initial cover pic

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
       </div>
     </nav>
 
-    <div id="slide-cont">
+    <!-- <div id="slide-cont">
       <div id="coverPage" class="center-align"><img src="../static/css/images/color6_4.JPG"></div>
-    </div>
+    </div> -->
 
     <div id="navPage" class="page valign-wrapper">
       <ul class="collection">
@@ -204,6 +204,7 @@
         </ul>
       </div>
     </nav>
+
 
 
 
