cleaned up app.js

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
         <div class="img-container">
           <img id="logo" src="../static/css/images/tc6_8.jpg">
         </div>
-        <p class="flow-text center-align"><span>The <span>Color</span> Six</span>  is a San Francisco based rock band that began in 2017 as a solo project of founding member <a target="_blank" href="https://www.instagram.com/dez_monroe/">Dez Monroe</a>. As of 2019, the lineup now includes bassist and singer <a target="_blank" href="https://www.instagram.com/vginnyg/">Adeline Jayne</a>. </a></p></div>
+        <p class="flow-text center-align"><span>The <span>Color</span> Six</span>  is a San Francisco based rock band that began in 2017 as a solo project of founding member <a target="_blank" href="https://www.instagram.com/dez_monroe/">Hunter Barsell</a>. As of 2019, the lineup now includes bassist and singer <a target="_blank" href="https://www.instagram.com/vginnyg/">Adeline Jayne</a>. </a></p></div>
 
       <div class="row">
 
