--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../static/css/plyr.css" />
   </head>
   <body>
-
+    
     <nav id="navTop">
       <div class="nav-wrapper">
         <ul id="nav-mobile" class="center">
@@ -24,17 +24,17 @@
       </div>
     </nav>
 
-    <!-- <div id="slide-cont">
-      <div id="coverPage" class="center-align"><img src="../static/css/images/color6_4.JPG"></div>
-    </div> -->
+    <div id="loading">Loading</div>
 
-    <div id="navPage" class="page valign-wrapper">
-      <ul class="collection">
-        <li id="link2events" class="collection-item gradient-border">Events</li>
-        <li id="link2music" class="collection-item gradient-border">Music</li>
-        <li id="link2videos" class="collection-item gradient-border">Videos</li>
-        <li id="link2aboutus" class="collection-item gradient-border">About Us</li>
-      </ul>
+    <div id="navPage" class="page">
+      <div class="valign-wrapper">
+        <ul class="collection">
+          <li id="link2events" class="collection-item gradient-border">Events</li>
+          <li id="link2music" class="collection-item gradient-border">Music</li>
+          <li id="link2videos" class="collection-item gradient-border">Videos</li>
+          <li id="link2aboutus" class="collection-item gradient-border">About Us</li>
+        </ul>
+      </div>
     </div>
 
     <nav id="mainNav" >
